Push all files except Scenes folder to pipeline-branch

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY="YOUR_OPENAI_API_KEY"
